phase2_Dev/src/objects/EEC_Lookup_Params__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to store custom query modifiers for the lookup controller when processing a Licensing Transaction. They are stored in Object value pairs with the new params.</description>
    <fields>
        <fullName>Like_Conditional_Operator__c</fullName>
        <defaultValue>&quot;OR&quot;</defaultValue>
        <description>This will be the static operator for the LIKE clause.</description>
        <inlineHelpText>This can only be OR or AND.</inlineHelpText>
        <label>Like Conditional Operator</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Like_Conditions__c</fullName>
        <defaultValue>&quot;Id&quot;</defaultValue>
        <description>This field will contain fields that need to be compared for the like conditional against the query string.</description>
        <inlineHelpText>This is a comma separated list of strings. Please ensure no spaces are present.</inlineHelpText>
        <label>Like Conditions</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Conditions__c</fullName>
        <defaultValue>&quot;Id DESC&quot;</defaultValue>
        <description>This field will contain the order by conditions for the query.</description>
        <label>Order Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Query_Field_Labels__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <description>This field is meant to represent a comma separated list of labels to match the query fields. These must be in the same order as the fields. Partial # of fields will be matched based on order of fields.</description>
        <inlineHelpText>If you wish to use custom labels enter them here. If this field is blank then field names will be used.</inlineHelpText>
        <label>Query Field Labels</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Query_Fields__c</fullName>
        <defaultValue>&quot;Id&quot;</defaultValue>
        <description>This field is to store all additional fields for the object to query.</description>
        <inlineHelpText>This can be any field on the object in question. Please ensure there are no spaces in this definition.</inlineHelpText>
        <label>Query Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Where_Conditions__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <description>This field is for all Where conditions required.</description>
        <label>Where Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>isSOQL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check if your search returns SOQL results</description>
        <label>isSOQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSOSL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check if your search returns SOSL results</description>
        <label>isSOSL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sObject_Name__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <description>The sObject&apos;s name for the field coming into the lookup.</description>
        <label>sObject Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Lookup Query Definitions</label>
</CustomObject>